--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
       </div>
 
       <!-- will have the slide in containers here -->
-      <div id="projectCatsOverlay" class="content-category-slide-in" style="width: calc(100% - 162px);"> <!---->
+      <div id="projectCatsOverlay" class="content-category-slide-in"> <!---->
         <span id="openAndCloseSpan__cats" class="content-category-slide-in__span">&#xab;</span>
-        <div id="wdOverlay" class="project__cats__overlay"> <!-- style="display: none;"-->
+        <div id="wdOverlay" class="project__cats__overlay" style="display: none;"> <!---->
           <h1 class="h1-no-style">Web Developement</h1>
           <div class="project__cats__overlay__organizer">
 
