updated to final version 1

--- a/src/pages/memeDB/displayMeme.html
+++ b/src/pages/memeDB/displayMeme.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="../../u-src/u-css/u-grid.css"/>
     <link rel="stylesheet" href="../../u-src/u-css/u-universal.css"/>
     <link rel="stylesheet" href="src/css/display.css"/>
+    <link rel="stylesheet" href="src/css/universal.css"/>
 
-    <!--<link rel="apple-touch-icon" href="src/img/logo-192.png">
-    <link rel="manifest" href="manifest.json">-->
     <title>inDev Developement</title>
     <style>
       
