--- a/src/pages/memeDB/search.html
+++ b/src/pages/memeDB/search.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../u-src/u-css/u-universal.css"/>
     <link rel="stylesheet" href="src/css/loadingAnimation.css"/>
     <link rel="stylesheet" href="src/css/search.css"/>
+    <link rel="stylesheet" href="src/css/universal.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <title>memeDB Search</title>
