--- a/src/pages/memeDB/upload.html
+++ b/src/pages/memeDB/upload.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../u-src/u-css/u-nav.css"/>
     <link rel="stylesheet" href="../../u-src/u-css/u-universal.css"/>
     <link rel="stylesheet" href="src/css/upload.css"/>
+    <link rel="stylesheet" href="src/css/universal.css"/>
     <title>memeDB Upload</title>
     <style>
       
