--- a/src/pages/tetris/index.html
+++ b/src/pages/tetris/index.html
@@ -47,32 +47,32 @@
         <div id="settingsModal" class="settings-modal">
           <div class="settings-modal-content">
             <div id="down-div" class="settings-button-div">
-              <h3 style="color:white">Hard Drop</h3>
+              <h3 class="setting-name">Hard Drop</h3>
               <button type="button" class="p1-up-button" id="downButton">s</button>
             </div>
             <div id="left-div" class="settings-button-div">
-              <h3 style="color:white">Left</h3>
+              <h3 class="setting-name">Left</h3>
               <button type="button" class="p1-down-button" id="leftButton">a</button>
             </div>
             <div id="right-div" class="settings-button-div">
-              <h3 style="color:white">Right</h3>
+              <h3 class="setting-name">Right</h3>
               <button type="button" class="p2-up-button" id="rightButton">d</button>
             </div>
             <div id="r-left-div" class="settings-button-div">
-              <h3 style="color:white">Rotate Left</h3>
+              <h3 class="setting-name">Rotate Left</h3>
               <button type="button" class="p2-up-button" id="rLeftButton">q</button>
             </div>
             <div id="r-right-div" class="settings-button-div">
-              <h3 style="color:white">Rotate Right</h3>
+              <h3 class="setting-name">Rotate Right</h3>
               <button type="button" class="p2-up-button" id="rRightButton">e</button>
             </div>
     
             <div id="reset-div" class="settings-button-div">
-              <h3 style="color:white">Hold</h3>
+              <h3 class="setting-name">Hold</h3>
               <button type="button" class="reset-button" id="resetButton">Space</button>
             </div>
             <div id="pause-div" class="settings-button-div">
-              <h3 style="color:white">Pause</h3>
+              <h3 class="setting-name">Pause</h3>
               <button type="button" class="pause-button" id="pauseButton">Esc</button>
             </div>
             <div class="back-button-div">
