--- a/src/pages/memeDB/homepage.html
+++ b/src/pages/memeDB/homepage.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../u-src/u-css/u-grid.css"/>
   <link rel="stylesheet" href="../../u-src/u-css/u-universal.css"/>
   <link rel="stylesheet" href="src/css/homepage.css"/>
+  <link rel="stylesheet" href="src/css/universal.css"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet">
   <title>memeDB homepage</title>
@@ -18,9 +19,10 @@
       <header>
         <nav class="nav">
           <a href="homepage.html" class="homeLink"><img src="src/img/Pepe-slick.png" alt="logo" width="54" height="54"/></a>
-          <a href="displayMeme.html" class="nav__link">Meme DB</a>
-          <a href="upload.html" class="nav__link">Upload</a>
-          <a href="search.html" class="nav__link">Search</a>
+          <a href="#" style="pointer-events: none;" class="nav__link">Not Hosted so all disabled</a>
+          <a href="displayMeme.html" style="pointer-events: none;" class="nav__link"><s>Meme DB</s></a>
+          <a href="upload.html" style="pointer-events: none;" class="nav__link"><s>Upload</s></a>
+          <a href="search.html" style="pointer-events: none;" class="nav__link"><s>Search</s></a>
         </nav>
       </header>
       <div class="aestheticDiv">
