updated to match test version

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header-container">
       <div class="header">
         <div class="projects-link__container">
-          <a href="./" class="no-style home-link">Home</a> <!--possibly change to "Travis Lane"-->
+          <a href="./" class="no-style home-link">T.S.L.</a> <!--possibly change to my name-->
         </div>
         <div class="dk-hide mobile-menu-container">
           <div id="mobileMenu" class="m-m-c__icon">
@@ -68,7 +68,7 @@
     <div class="main-container">
       <div class="spacer-container">
         <img src="src/img/cpp.png" alt="" class="lang-img mb-hide">
-        <img src="src/img/Python.png" alt="" class="lang-img">
+        <img src="src/img/Python.png" alt="" class="lang-img special-case2">
         <img src="src/img/java.png" alt="" class="lang-img special-case">
         <img src="src/img/javascript.png" alt="" class="lang-img">
         <img src="src/img/html.png" alt="" class="lang-img mb-hide">
@@ -671,7 +671,7 @@
         </div>
         
         <div id="torcOverlay" class="project__cats__overlay" style="display: none;">
-          <h1 class="h1-no-style">Organizations: TORCommunity <a href="https://torcommunity.com/" target="_blank" rel="noreferrer noopener"><i class="fas fa-external-link-alt proj-link"></i></a></h1>
+          <h1 class="mb-resizer h1-no-style">Organizations: TORCommunity <a href="https://torcommunity.com/" target="_blank" rel="noreferrer noopener"><i class="fas fa-external-link-alt proj-link"></i></a></h1>
           <div class="organization-container-layout">
             <div class="organization-container-layout__info">
               <h2 class="h1-no-style">About</h2>
@@ -702,14 +702,14 @@
               </div>
             </div>
             <div class="organization-container-layout__logo">
-              <img src="./src/img/torc-icon-2016.png" alt="torc-logo">
-              <img src="./src/img/torc-logo-text.png" alt="">
+              <img src="./src/img/torc-icon-2016.png" alt="torc-logo" class="org-img">
+              <img src="./src/img/torc-logo-text.png" alt="" class="org-img-v2">
             </div>
           </div>
         </div>
         
         <div id="slicersOverlay" class="project__cats__overlay" style="display: none;">
-          <h1 class="h1-no-style">Organizations: SWTOR Slicers <a href="https://github.com/SWTOR-Slicers" target="_blank" rel="noreferrer noopener"><i class="fas fa-external-link-alt proj-link"></i></a></h1>
+          <h1 class="mb-resizer h1-no-style">Organizations: SWTOR Slicers <a href="https://github.com/SWTOR-Slicers" target="_blank" rel="noreferrer noopener"><i class="fas fa-external-link-alt proj-link"></i></a></h1>
           <div class="organization-container-layout">
             <div class="organization-container-layout__info">
               <h2 class="h1-no-style">About</h2>
@@ -734,7 +734,7 @@
               </div>
             </div>
             <div class="organization-container-layout__logo">
-              <img src="./src/img/SWTORServerLogo.png" alt="torc-logo" height="460" style="padding: 20px;">
+              <img src="./src/img/SWTORServerLogo.png" alt="torc-logo" class="org-img">
               <h1 style="font-size: 30px;">SWTOR Slicers</h1>
             </div>
           </div>
@@ -747,7 +747,7 @@
           <div class="proj-page-main">
             <div class="p-p-main__side-cont">
               <div class="p-p-main__side">
-                <h2 class="h1-no-style">Overview</h2>
+                <h2 class="h2-no-style">Overview</h2>
                 <p class="p-p-main__p-tag">
                   This is one of my favorite projects. It is an external character creator and outfit designer for 
                   Star Wars The Old Republic. I really love this game and the community, and wanted to do 
@@ -757,7 +757,7 @@
                   before.
                 </p>
 
-                <h2 class="h1-no-style">Reasons & Purpose</h2>
+                <h2 class="h2-no-style">Reasons & Purpose</h2>
                 <ul class="p-p-main__p-tag">
                   <li>I wanted to make something truly unique that had not been done before</li>
                   <ul>
@@ -772,7 +772,7 @@
                   </ul>
                 </ul>
 
-                <h2 class="h1-no-style">Outcome</h2>
+                <h2 class="h2-no-style">Outcome</h2>
                 <ul class="p-p-main__p-tag">
                   <li>How to read hexadecimal headers</li>
                   <li>How to read custom file formats</li>
@@ -800,22 +800,22 @@
             <div class="p-p-main__side-cont">
               <div class="p-p-main__side">
                 <div class="release">
-                  <h2 class="h1-no-style">Release two (March 25, 2021)</h2>
-                  <img src="./src/img/Release2.png" alt="" height="500px">
-                  <h3 class="h1-no-style">Length: ~300 hours</h3>
-                  <h3 class="h1-no-style">Bug Fixes</h3>
+                  <h2 class="h2-no-style">Release two (March 25, 2021)</h2>
+                  <img src="./src/img/Release2.png" alt="" height="500px" class="proj-img-resize">
+                  <h3 class="h3-no-style">Length: ~300 hours</h3>
+                  <h3 class="h3-no-style">Bug Fixes</h3>
                   <ul class="p-p-main__p-tag">
                     <li>Fixed many broken items (only a few left still needing to be fixed)</li>
                     <li>Fixed a few edge cases where things like hoods would render on Togrutas and Twi'leks</li>
                     <li>Fixed an issue where exporting the zip had no file extension on Firefox</li>
                     <li>Fixed long loading times</li>
                   </ul>
-                  <h3 class="h1-no-style">New Features</h3>
+                  <h3 class="h3-no-style">New Features</h3>
                   <ul class="p-p-main__p-tag">
                     <li>Now has dark side corruption</li>
-                    <img src="./src/img/Release2__corruption.png" alt="" height="200px">
+                    <img src="./src/img/Release2__corruption.png" alt="" height="200px" class="proj-img-resize-eye">
                     <li>Added Eye Cube Maps (the glossy reflection on the character's eyes)</li>
-                    <img src="./src/img/EyeCubeMap.png" alt="">
+                    <img src="./src/img/EyeCubeMap.png" alt="" class="proj-img-resize-eye">
                     <li>Changed the lighting to be closer to the preview window. (this is the default for now, but more on that later)</li>
                     <li>Added a Unify Colors option for each armor slot (this makes the slot in question become the same color as the chest slot)</li>
                     <li>Added ability to apply dyes for each slot</li>
@@ -827,10 +827,10 @@
                   </ul>
                 </div>
                 <div class="release">
-                  <h2 class="h1-no-style">Release one (March 14, 2021)</h2>
-                  <img src="./src/img/Release_one.png" alt="" height="500px">
-                  <h3 class="h1-no-style">Length: 270+ hours</h3>
-                  <h3 class="h1-no-style">New Features</h3>
+                  <h2 class="h2-no-style">Release one (March 14, 2021)</h2>
+                  <img src="./src/img/Release_one.png" alt="" height="500px" class="proj-img-resize">
+                  <h3 class="h3-no-style">Length: 270+ hours</h3>
+                  <h3 class="h3-no-style">New Features</h3>
                   <ul class="p-p-main__p-tag">
                     <li>Users can download a <i>.zip</i> with all the nessesary info to re-create their character in blender</li>
                     <li>Has all character creator options that the game has</li>
@@ -888,14 +888,14 @@
                   The website is composed of three(3) main parts. 
                 </div>
                 <div class="pw-components-container">
-                  <img src="./src/img/Portfolio site hompage.png" alt="" width="700px">
+                  <img src="./src/img/Portfolio site hompage.png" alt="" width="700px" class="proj-img-resize-pw">
                   <div class="pw-component-info">
                     <h3 class="h1-no-style">Home page</h3>
                     <div class="pw-component-info__blurb">
                       The first is the home page, or landing page. This has some information about me, and a list of some of my skills. 
                     </div>
                   </div>
-                  <img src="./src/img/Portfolio site category tab.png" alt="" width="700px">
+                  <img src="./src/img/Portfolio site category tab.png" alt="" width="700px" class="proj-img-resize-pw">
                   <div class="pw-component-info">
                     <h3 class="h1-no-style">Project Categories and Previews</h3>
                     <div class="pw-component-info__blurb">
@@ -903,7 +903,7 @@
                       my projects, based on what category of computer science they fall under. 
                     </div>
                   </div>
-                  <img src="./src/img/Portfolio site project tab.png" alt="" width="700px">
+                  <img src="./src/img/Portfolio site project tab.png" alt="" width="700px" class="proj-img-resize-pw">
                   <div class="pw-component-info">
                     <h3 class="h1-no-style">Project Pages</h3>
                     <div class="pw-component-info__blurb">
@@ -948,21 +948,23 @@
                   Modbot is composed of three(3) main parts. 
                 </div>
                 <div class="pw-components-container">
-                  <img src="./src/img/Modbot API.png" alt="" width="700px">
+                  <img src="./src/img/Modbot API.png" alt="" width="700px" class="proj-img-resize-pw">
                   <div class="pw-component-info">
                     <h3 class="h1-no-style">API</h3>
                     <div class="pw-component-info__blurb">
                       The API is the core of the project. This is where all of the custom command information is stored, as well as the settings for which commands are enabled/disabled.
                     </div>
                   </div>
-                  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS_6IX1-0JAoWJZ9qwPlam1cFcOd46-iMlHvqH7PeSBf88BT81jSM9orLoGkAHkLS9ErjWaoEVASBXW/embed?start=false&loop=true&delayms=5000" frameborder="0" width="700" height="436" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  <div class="google-slides-container">
+                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS_6IX1-0JAoWJZ9qwPlam1cFcOd46-iMlHvqH7PeSBf88BT81jSM9orLoGkAHkLS9ErjWaoEVASBXW/embed?start=false&loop=true&delayms=5000" frameborder="0" width="700" height="436" class="proj-img-resize-ifm" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                  </div>
                   <div class="pw-component-info">
                     <h3 class="h1-no-style">Front End</h3>
                     <div class="pw-component-info__blurb">
                       The frontend is how a user can interact with the bot, and change settings and features.
                     </div>
                   </div>
-                  <img src="./src/img/Modbot discord bot.png" alt="" width="700px">
+                  <img src="./src/img/Modbot discord bot.png" alt="" width="700px" class="proj-img-resize-pw">
                   <div class="pw-component-info">
                     <h3 class="h1-no-style">Discord Bot</h3>
                     <div class="pw-component-info__blurb">
@@ -979,7 +981,7 @@
           <div class="proj-page-main">
             <div class="p-p-main__side-cont">
               <div class="p-p-main__side">
-                <h2 class="h1-no-style">Overview</h2>
+                <h2 class="h2-no-style">Overview</h2>
                 <p class="p-p-main__p-tag">
                   The memeDB was one of my first projects. I had finished AP Java a few months earlier, so I was 
                   still relatively new to programming. I read about SpringBoot (an API framework for Java), and 
@@ -990,14 +992,14 @@
                   first attempt at web developement, and I enjoyed it alot.
                 </p>
 
-                <h2 class="h1-no-style">Reasons & Purpose</h2>
+                <h2 class="h2-no-style">Reasons & Purpose</h2>
                 <ul class="p-p-main__p-tag">
                   <li>Wanted to try something new.</li>
                   <li>Had just learned about SpringBoot, and wanted to learn the basics.</li>
                   <li>Wanted to learn web developement.</li>
                 </ul>
 
-                <h2 class="h1-no-style">Outcome</h2>
+                <h2 class="h2-no-style">Outcome</h2>
                 <ul class="p-p-main__p-tag">
                   <li>Learned the basics of SpringBoot</li>
                   <li>Learned SQL.</li>
@@ -1007,21 +1009,21 @@
             </div>
             <div class="p-p-main__side-cont">
               <div class="p-p-main__side__v2">
-                <h2 class="h1-no-style">Components</h2>
+                <h2 class="h2-no-style">Components</h2>
                 <div class="component-overview">
                   The MemeDB is composed of two main parts. 
                 </div>
                 <div class="pw-components-container">
-                  <img src="./src/img/MemeDB API.png" alt="" width="700px">
+                  <img src="./src/img/MemeDB API.png" alt="" width="700px" class="proj-img-resize-pw">
                   <div class="pw-component-info">
-                    <h3 class="h1-no-style">API</h3>
+                    <h3 class="h3-no-style">API</h3>
                     <div class="pw-component-info__blurb">
                       This project was my first attempt at using SpringBoot to make an API and database. It is not as advanced or efficient as the Modbot API, but it accomplishes its purpose accetably, and uses good programming practices and conventions.
                     </div>
                   </div>
-                  <img src="./src/img/MemeDB homepage.png" alt="" width="700px">
+                  <img src="./src/img/MemeDB homepage.png" alt="" width="700px" class="proj-img-resize-pw">
                   <div class="pw-component-info">
-                    <h3 class="h1-no-style">Front End</h3>
+                    <h3 class="h3-no-style">Front End</h3>
                     <div class="pw-component-info__blurb">
                       The MemeDB UI was my first web developement project. I wanted to make a database with a front end that allowed users to upload files, search through files in the database, and view them. Unfortunately it is not hosted currently, but I plan to do so eventually.
                     </div>
@@ -1065,14 +1067,21 @@
               <div class="p-p-main__side__v2">
                 <div class="switch-container">
                   <div>Normal</div>
-                  <label class="switch">
+                  <label class="switch mb-hide">
                     <input id="msVersionCheckbox" type="checkbox">
                     <span class="slider"></span>
                   </label>
-                  <div>Animated</div>
+                  <div class="mb-hide">Animated</div>
                 </div>
-                <iframe id="msNormal" src="./src/pages/minesweeper/original/index.html" frameborder="0" style="min-height: 430px; min-width: 470px;"></iframe>
-                <iframe id="msAnimated" src="./src/pages/minesweeper/animated/index.html" frameborder="0" style="min-height: 430px; min-width: 470px; display: none;"></iframe>
+                <div class="responsive-iframe-container">
+                  <iframe id="msNormal" src="./src/pages/minesweeper/original/index.html" frameborder="0" class="responsive-iframe"></iframe>
+                </div>
+                <div class="dk-hide no-show">
+                  <h3 class="h3-no-style">Unfortunately, animated minesweeper does not work in this layout at this time.</h3>
+                </div>
+                <div class="responsive-iframe-container" style="display: none;">
+                  <iframe id="msAnimated" src="./src/pages/minesweeper/animated/index.html" frameborder="0" class="responsive-iframe"></iframe>
+                </div>
               </div>
             </div>
           </div>
@@ -1104,7 +1113,11 @@
             </div>
             <div class="p-p-main__side-cont">
               <div class="p-p-main__side__pong">
-                <iframe style="padding-left: 40px;" src="./src/pages/pong/index.html" frameborder="0" height="645px" width="600px"></iframe>
+                <iframe style="padding-left: 40px;" src="./src/pages/pong/index.html" frameborder="0" height="645px" width="600px" class="mb-hide"></iframe>
+                <div class="dk-hide no-show">
+                  <img src="./src/pages/pong/src/img/Pong.png" alt="project-image" height="180px">
+                  <h3 class="h3-no-style">Unfortunately, pong does not work in this layout at this time.</h3>
+                </div>
               </div>
             </div>
           </div>
@@ -1136,13 +1149,17 @@
             </div>
             <div class="p-p-main__side-cont">
               <div class="p-p-main__side__v2">
-                <iframe src="./src/pages/tetris/index.html" frameborder="0" style="min-height: 640px; min-width: 530px;"></iframe>
+                <iframe src="./src/pages/tetris/index.html" frameborder="0" style="min-height: 640px; min-width: 530px;" class="mb-hide"></iframe>
+                <div class="dk-hide no-show">
+                  <img src="./src/pages/tetris/src/img/tetris.png" alt="project-image" height="180px">
+                  <h3 class="h3-no-style">Unfortunately, tetris does not work in this layout at this time.</h3>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="./src/js/index.js"></script>
+    <script src="./src/js/index.js" type="module"></script>
   </body>
 </html>
